# CV_QA_Agent

./: .gitignore  README.md  pyproject.toml
src/: main.py  requirements.txt  services.py
src/routes/: routes.py
